--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <a href="/">Food Ninja</a>
           </h1>
         </div>
-        <ul>
+        <ul class="">
           <li>
             <a href="#">
               <span>Home</span>
@@ -36,9 +36,9 @@
     </div>
   
     <main class="p-16">
-      <div>
+      <div class="flex md:justify-end justify-center">
         <a href="#" class="text-primary">Log in</a>
-        <a href="#" class="text-primary">Sign up</a>
+        <a href="#" class="text-primary ml-2">Sign up</a>
       </div>
 
       <header>
@@ -47,11 +47,11 @@
       </header>
 
       <div>
-        <h4 class="font-bold mt-12 pd-2 border-b-2 border-gray-700 text-huge">Latest Recipes</h4>
+        <h4 class="font-bold mt-12 pd-2 border-b-2 border-gray-700">Latest Recipes</h4>
   
-        <div>
+        <div class="mt-8">
           <!-- cards go here -->
-          <div class="mt-8"> 
+          <div class> 
             <img src="img/1.jpg" alt="stew">
             <div>
               <span>5 Bean Chili Stew</span>
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="flex justify-center">
         <div class="bg-secondary-100 text-secondary-200">Load more</div>
       </div>    
     </main>
