--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="../dist/output.css">
 </head>
-<body class="text-gray-600 font-body">
+<body class="text-gray-600 font-body p-2">
 
   <div>
     <div>
@@ -51,11 +51,34 @@
   
         <div class="mt-8">
           <!-- cards go here -->
-          <div class> 
-            <img src="img/1.jpg" alt="stew">
-            <div>
-              <span>5 Bean Chili Stew</span>
-              <span>Recipe by Mario</span>
+          <div class="card"> 
+            <img src="img/1.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
+            <div class="m-4">
+              <span class="font-bold">5 Bean Chili Stew</span>
+              <span class="block">Recipe by Mario</span>
+            </div>
+            <div class="badge">
+              25 min
+            </div>
+          </div>
+          <div class="card"> 
+            <img src="img/2.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
+            <div class="m-4">
+              <span class="font-bold">Veg Noodles</span>
+              <span class="block">Recipe by Mario</span>
+            </div>
+            <div class="badge">
+              25 min
+            </div>
+          </div>
+          <div class="card"> 
+            <img src="img/3.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
+            <div class="m-4">
+              <span class="font-bold">Tufe Carry</span>
+              <span class="block">Recipe by Mario</span>
+            </div>
+            <div class="badge">
+              25 min
             </div>
           </div>
         </div>
