--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,19 @@
   <title>Document</title>
   <link rel="stylesheet" href="../dist/output.css">
 </head>
-<body class="text-gray-600 font-body p-2">
+<body class="text-gray-600 font-body">
 
-  <div>
-    <div>
-      <nav>
+  <div class="grid md:grid-cols-3">
+    <div class="md:col-span-1 md:flex md:justify-end">
+      <nav class="text-center">
         <div>
           <h1 class="font-bold uppercase p-4 border-b-2 border-gray-200">
-            <a href="/">Food Ninja</a>
+            <a href="/" class=" hover:text-gray-700">Food Ninja</a>
           </h1>
         </div>
-        <ul class="">
+        <ul class="text-sm">
           <li>
-            <a href="#">
+            <a href="#" class="border-r-4 border-primary px-12">
               <span>Home</span>
             </a>
           </li>
@@ -35,23 +35,23 @@
       </nav>
     </div>
   
-    <main class="p-16">
+    <main class="p-16 md:col-span-2 bg-gray-100">
       <div class="flex md:justify-end justify-center">
-        <a href="#" class="text-primary">Log in</a>
-        <a href="#" class="text-primary ml-2">Sign up</a>
+        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign up</a>
       </div>
 
       <header>
-        <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
+        <h2 class="text-gray-700 text-4xl font-semibold">Recipes</h2>
         <h3 class="text-2xl">For Ninjas</h3>
       </header>
 
       <div>
         <h4 class="font-bold mt-12 pd-2 border-b-2 border-gray-700">Latest Recipes</h4>
   
-        <div class="mt-8">
+        <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
-          <div class="card"> 
+          <div class="card hover:shadow-lg"> 
             <img src="img/1.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
             <div class="m-4">
               <span class="font-bold">5 Bean Chili Stew</span>
@@ -61,7 +61,7 @@
               25 min
             </div>
           </div>
-          <div class="card"> 
+          <div class="card hover:shadow-lg"> 
             <img src="img/2.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
             <div class="m-4">
               <span class="font-bold">Veg Noodles</span>
@@ -71,7 +71,7 @@
               25 min
             </div>
           </div>
-          <div class="card"> 
+          <div class="card hover:shadow-lg"> 
             <img src="img/3.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
             <div class="m-4">
               <span class="font-bold">Tufe Carry</span>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="flex justify-center">
-        <div class="bg-secondary-100 text-secondary-200">Load more</div>
+        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load more</div>
       </div>    
     </main>
   </div>
