--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,22 @@
 </head>
 <body class="text-gray-600 font-body">
 
-  <div class="grid md:grid-cols-3">
+  <div class="grid md:grid-cols-4">
     <div class="md:col-span-1 md:flex md:justify-end">
       <nav class="text-center">
-        <div>
+        <div class="flex justify-between items-center">
           <h1 class="font-bold uppercase p-4 border-b-2 border-gray-200">
             <a href="/" class=" hover:text-gray-700">Food Ninja</a>
           </h1>
+          <div class="px-4 cursor-pointer md:hidden text-2xl" id="burger">
+            ...
+          </div>
         </div>
-        <ul class="text-sm">
+        <ul class="text-sm mt-6 hidden md:block" id="menu">
           <li>
             <a href="#" class="border-r-4 border-primary px-12">
               <span>Home</span>
-            </a>
+            </a>  
           </li>
           <li>
             <a href="#">
@@ -35,10 +38,10 @@
       </nav>
     </div>
   
-    <main class="p-16 md:col-span-2 bg-gray-100">
+    <main class="p-16 md:col-span-3 bg-gray-100">
       <div class="flex md:justify-end justify-center">
-        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
-        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white">Sign up</a>
+        <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Log in</a>
+        <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Sign up</a>
       </div>
 
       <header>
@@ -81,6 +84,26 @@
               25 min
             </div>
           </div>
+          <div class="card hover:shadow-lg"> 
+            <img src="img/2.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
+            <div class="m-4">
+              <span class="font-bold">Veg Noodles</span>
+              <span class="block">Recipe by Mario</span>
+            </div>
+            <div class="badge">
+              25 min
+            </div>
+          </div>
+          <div class="card hover:shadow-lg"> 
+            <img src="img/3.jpg" alt="stew" class="w-full h-32 sm:h-34 object-cover">
+            <div class="m-4">
+              <span class="font-bold">Tufe Carry</span>
+              <span class="block">Recipe by Mario</span>
+            </div>
+            <div class="badge">
+              25 min
+            </div>
+          </div>
         </div>
 
         <h4 class="font-bold mt-12 pd-2">Most Popular</h4>
@@ -91,10 +114,10 @@
       </div>
 
       <div class="flex justify-center">
-        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load more</div>
+        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load more</div>
       </div>    
     </main>
   </div>
-
+<script src="index.js"></script>
 </body>
 </html>
