--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
             ...
           </div>
         </div>
-        <ul class="text-sm mt-6 hidden md:block" id="menu">
+        <ul class="text-lg mt-6 hidden md:block" id="menu">
           <li>
             <a href="#" class="border-r-4 border-primary px-12">
-              <span>Home</span>
+              <span class="font-bold">Home</span>
             </a>  
           </li>
           <li>
